--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
-        "jsx": "react"
-    }
+        "lib":  ["es2019", "es2020.promise", "es2020.bigint", "es2020.string","dom"],
+        "target": "es2019",
+        "module": "esnext",
+        "jsx": "react",
+        "strict":true
+    },
+    "exclude": ["node_modules","dist"]
 }
