--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "bundle": "rollup --c",
+    "check-types": "tsc ./src/index.tsx --noEmit",
     "dev": "rollup --c rollup.config.dev.js --watch"
   },
   "dependencies": {
