--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
         "lib":  ["es2019", "es2020.promise", "es2020.bigint", "es2020.string","dom"],
         "target": "es2019",
         "module": "esnext",
+        "moduleResolution": "node",
         "jsx": "react",
-        "strict":true
+        "strict": true
     },
-    "exclude": ["node_modules","dist"]
+    "exclude": ["node_modules","dist"],
+    "include": ["src/**/*.*"]
 }
