--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "module": "esnext",
         "moduleResolution": "node",
         "jsx": "react",
-        "strict": true
+        "strict": true,
+        "noUncheckedIndexedAccess": true
     },
     "exclude": ["node_modules","dist"],
     "include": ["src/**/*.*"]
